llvm/test/multi-list.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/test/multi-list.llvm:9:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
